libtrancevibe ChangeLog
=======================

2008-01-03 Kyle Machulis <kyle@nonpolynomial.com>
	* First release of libtrancevibe project, includes source files and cmake build system