@@ -4,11 +4,13 @@
 
 SET(SRCS tvtest/tvtest.c)
 
+SET(LIBS ${libtrancevibe_LIBRARY} ${LIBTRANCEVIBE_DEP_LIBS})
+
 BUILDSYS_BUILD_EXE(
   NAME tvtest
-  SOURCES "${SRCS}" 
+  SOURCES "${SRCS}"
   CXX_FLAGS FALSE
-  LINK_LIBS ${libtrancevibe_LIBRARY} ${LIBTRANCEVIBE_DEP_LIBS}
+  LINK_LIBS "${LIBS}"
   LINK_FLAGS FALSE 
   DEPENDS ${libtrancevibe_LIBRARY}_DEPEND
   SHOULD_INSTALL TRUE
