@@ -1,13 +1,12 @@
-/*
- * Declaration file for Trancevibrator User Space Driver
+/***
+ * @file trancevibe.h
+ * @brief LibUSB based implementation of trance vibrator communication
+ * @author Kyle Machulis (kyle@nonpolynomial.com)
+ * @copyright (c) 2005-2009 Nonpolynomial Labs/Kyle Machulis
+ * @license BSD License
  *
- * Copyright (c) 2005-2008 Kyle Machulis/Nonpolynomial Labs <kyle@nonpolynomial.com> (http://www.nonpolynomial.com)
+ * Project info at http://libtrancevibe.nonpolynomial.com/
  *
- * More info on Nonpolynomial Labs @ http://www.nonpolynomial.com
- *
- * Sourceforge project @ http://www.sourceforge.net/projects/libtrancevibe/
- *
- * This library is covered by the MIT License, read LICENSE.txt for details.
  */
 
 #ifndef LIBTRANCEVIBE_H
@@ -22,15 +21,32 @@
 /// Error code for non-connected trancevibes
 #define ETRANCEVIBENOTCONNECTED -5
 
-#include "usb.h"
-
-/// Typedef for the libusb handle, to make code more readable
-typedef usb_dev_handle* trancevibe; 
+/// Typedef for nputil struct, to make code more readable
+#ifdef LIBUSB_0.1
+#include "nputil_libusb.h"
+typedef nputil_libusb_struct* trancevibe; 
+#else
+#include "nputil_libusb1.h"
+typedef nputil_libusb1_struct trancevibe;
+#endif
 
 #ifdef __cplusplus
 extern "C" {
 #endif
 
+/** 
+ * Creates a trancevibrator struct for usage
+ * 
+ * 
+ * @return A pointer to a trancevibrator struct
+ */
+	trancevibe* trancevibe_create();
+
+/** 
+ * Deletes a trancevibrator struct from memory when finished
+ * 
+ */
+	void trancevibe_delete(trancevibe* dev);
 
 /** 
  * Counts trancevibes connected to the USB busses on the system
@@ -38,7 +54,7 @@ extern "C" {
  * 
  * @return Number of trancevibes connected
  */
-int trancevibe_get_count();
+	int trancevibe_get_count(trancevibe* dev);
 
 /** 
  * Opens the device
@@ -48,14 +64,14 @@ int trancevibe_get_count();
  * 
  * @return device_index on success, libusb error or ETRANCEVIBENOTCONNECTED on error
  */
-int trancevibe_open(trancevibe* dev, unsigned int device_index);
+	int trancevibe_open(trancevibe* dev, unsigned int device_index);
 
 /** 
  * Closes trancevibe passed to it
  * 
  * @param tv Trancevibe handle to close
  */
-void trancevibe_close(trancevibe dev);
+	void trancevibe_close(trancevibe* dev);
 
 /** 
  * Sets speed for the trance vibrator handle passed to it
@@ -66,7 +82,7 @@ void trancevibe_close(trancevibe dev);
  * 
  * @return 0 or greater on success, libusb error or ETRANCEVIBENOTCONNECTED on error
  */
-int trancevibe_set_speed(trancevibe dev, unsigned char speed, unsigned int timeout);
+	int trancevibe_set_speed(trancevibe* dev, unsigned char speed, unsigned int timeout);
 
 #ifdef __cplusplus
 }
