@@ -1,5 +1,7 @@
 libtrancevibe ChangeLog
 =======================
 
+2009-12-27 Kyle Machulis <kyle@nonpolynomial.com>
+	* Updated libtrancevibe to use libusb-1.0 calls
 2008-01-03 Kyle Machulis <kyle@nonpolynomial.com>
 	* First release of libtrancevibe project, includes source files and cmake build system
